# Reflection

./: .gitignore  CMakeLists.txt  ClassInfo.cpp  ClassInfo.h  JSON.cpp  JSON.h  Makefile  MetaMethods.h  Object.cpp  Object.h  README.md  ReflMgr.cpp  ReflMgr.h  ReflMgrInit.cpp  ReflMgrInit.h  TemplateUtils.h  TypeID.cpp  TypeID.h  main.cpp  xmake.lua
